Integrated Spring Security with JPA and MySQL